# eva-tools

./: .gitignore  .travis.settings.xml  .travis.yml  README.md  pom.xml
.github/workflows/: run-tests.yml
accession-monitoring/: __init__.py  monitor_duplicate_accessions.py  monitor_duplicate_clustering_accessions.nf  pyproject.toml
count-stats/: pom.xml
count-stats/src/main/resources/: application.properties
database-migration/: README.md  pom.xml
database-migration/src/main/resources/: application.properties  example-mongodb.properties
dbsnp-importer/: pom.xml
dbsnp-importer/src/main/resources/: application.properties
dbsnp-importer/src/test/resources/: AssemblyReport.txt  Gallus_gallus.Gallus_gallus-5.0.dna.chromosome.22.fa.fai  application-eva-submitted.properties  application.properties  data.sql  dbsnp-data.sql  dbsnp-schema.sql  schema.original.sql  schema.sql  test-data.sql  testschema.sql
dbsnp-importer/src/test/resources/properties/: application-eva-submitted.properties  application.properties
deployment_scripts/: README.md  deploy_python_as_dir.sh  deploy_python_in_venv.sh  deploy_python_project_as_dir.sh  deploy_python_project_in_venv.sh
eva-cli-usage-stats/: cli_usage_stats.py  pyproject.toml  requirements.txt
eva-stats/: pyproject.toml  requirements.txt  stats_accessioning.py  stats_variant_warehouse.py
eva-usage-stats/: WSQueryAnalysis.py  ftp_usage.py  pyproject.toml  requirements.txt  ws_query_analysis.py  ws_query_fill_in_location.py
eva-usage-stats/usage_visualisation/: summarise_endpoints.py  summarise_query_params.py
evapro-refresh/: evapro_prod_refresh.py  pyproject.toml  requirements.txt
slurm-scripts/: eva-sbatch  eva-srun
update_sc_name/: pyproject.toml  update_scientific_name.py
variant-remapping-automation/: gather_release_species.py  genome_target_tracker.py  get_custom_assembly.py  prepare_release_remapping_tables.py  prepare_remapping_table.py  remapping_automation.py  remapping_config.py  remapping_process.nf  requirements.txt
variant-remapping-automation/tests/: test_get_custom_assembly.py  test_remapping_automation.py
variant-remapping-automation/tests/nextflow-tests/: build_tests.sh  run_tests.sh  template_remapping_config.yml  test_remapping_config.yaml
variant-remapping-automation/tests/nextflow-tests/java/: FakeExtractionPipeline.java  FakeLoadingPipeline.java
variant-remapping-automation/tests/resources/: eva-maven-settings.xml
vcf-dumper/: README.md  pom.xml
vcf-dumper/vcf-dumper-cli/: pom.xml
vcf-dumper/vcf-dumper-lib/: pom.xml
vcf-dumper/vcf-dumper-lib/src/main/resources/: eva.properties  logback.xml
vcf-dumper/vcf-dumper-lib/src/test/resources/: evaTest.properties  logback-test.xml  vcfTestHeader.vcf
vcf-dumper/vcf-dumper-lib/src/test/resources/db-dump/eva_btaurus_umd31/: files_2_0.json  variants_2_0.json
vcf-dumper/vcf-dumper-lib/src/test/resources/db-dump/eva_hsapiens_grch37/: files_2_0.json  variants_2_0.json
vcf-dumper/vcf-dumper-lib/src/test/resources/db-dump/eva_oaries_oarv31/: annotationMetadata_2_0.json  annotations_2_0.json  files_2_0.json  variants_2_0.json
vcf-dumper/vcf-dumper-lib/src/test/resources/dump/VariantExporterTest/: files.metadata.json  variants.metadata.json
vcf-dumper/vcf-dumper-lib/src/test/resources/dump/eva_btaurus_umd31_test/: files.metadata.json  variants.metadata.json
vcf-dumper/vcf-dumper-lib/src/test/resources/dump/eva_oaries_oarv31/: files.bson  (+1 more)
vcf-dumper/vcf-dumper-lib/src/test/resources/properties/: evaTest.properties
vcf-dumper/vcf-dumper-ws/: pom.xml
vcf-dumper/vcf-dumper-ws/src/main/resources/: application.properties
vcf-dumper/vcf-dumper-ws/src/main/webapp/WEB-INF/: web.xml
vcf-dumper/vcf-dumper-ws/src/test/resources/: application.properties
vcf-dumper/vcf-dumper-ws/src/test/resources/properties/: test.properties
vcf-dumper/vcf-dumper-ws/src/test/resources/test-data/: annotations.json  annotationsMetadata.json  files.json  variants.json
vcf-release-benchmarking/: benchmarking_strategies.js  pyproject.toml  run_benchmarking.py
(+265 files in other folders)
